Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-100854

[WMF] Crash on resuming playback of specific video

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.2.5, 6.3.0 RC, 6.4.0 Beta1
    • 6.2.3
    • Multimedia
    • None
    • Windows 10
    • Windows
    • b068cb3599 (qt/qtmultimedia/dev) 525e2f4c2c (qt/qtmultimedia/6.3) 0558f4c835 (qt/qtmultimedia/6.2) 0558f4c835 (qt/tqtc-qtmultimedia/6.2) 525e2f4c2c (qt/tqtc-qtmultimedia/6.3) b068cb3599 (qt/tqtc-qtmultimedia/dev) 525e2f4c2c (qt/qtmultimedia/6.3.0)

      App is crashed on resuming playback of specific video.

      Reproduced with standard Quick Multimedia Player example.
      Just start playback of attached video file video.mp4 , pause and resume few times.

      Crash stack:

                                                                             
      1  MFCreateEncryptedMediaExtensionsStoreActivate MFCORE    0x7ffc37204ff5 
      2  MFCreateTopologyNode                          MFCORE    0x7ffc371931b2 
      3  MFCreateEncryptedMediaExtensionsStoreActivate MFCORE    0x7ffc37274990 
      4  MFCreateTopologyNode                          MFCORE    0x7ffc3718e0b6 
      5  MFCreateTopologyNode                          MFCORE    0x7ffc3718de4f 
      6  MFCreateTopologyNode                          MFCORE    0x7ffc371917aa 
      7  MFCreateTopologyNode                          MFCORE    0x7ffc3718e832 
      8  MFCreateTopologyNode                          MFCORE    0x7ffc3718d825 
      9  MFCreateTopologyNode                          MFCORE    0x7ffc3718d469 
      10 MFCreateTopology                              MFCORE    0x7ffc371bfafc 
      11 RtwqShutdown                                  RTWorkQ   0x7ffc5078c5c1 
      12 RtwqShutdown                                  RTWorkQ   0x7ffc5078c386 
      13 RtwqAllocateSerialWorkQueue                   RTWorkQ   0x7ffc5078936d 
      14 TpAllocPool                                   ntdll     0x7ffc59bf2150 
      15 TpReleaseCleanupGroupMembers                  ntdll     0x7ffc59be315a 
      16 BaseThreadInitThunk                           KERNEL32  0x7ffc59267034 
      17 RtlUserThreadStart                            ntdll     0x7ffc59be2651 
      

      Application output:

      11:25:51: Debugging E:\Qt\Examples\Qt-6.2.3\multimedia\video\build-mediaplayer-Desktop_Qt_6_2_3_MSVC2019_64bit-Debug\mediaplayer.exe ...
      onecore\windows\directx\database\helperlibrary\lib\directxdatabasehelper.cpp(652)\d3d9.dll!00007FFC1657D025: (caller: 00007FFC1657CB2C) ReturnHr(1) tid(50a0) 80004002 No such interface supported
      mincore\com\oleaut32\dispatch\ups.cpp(2122)\OLEAUT32.dll!00007FFC58FD9DD6: (caller: 00007FFC58FD91E9) ReturnHr(1) tid(506c) 8002801D Library not registered.
      onecore\com\combase\dcomrem\security.cxx(3071)\combase.dll!00007FFC5861904C: (caller: 00007FFC0591823E) ReturnHr(1) tid(1c64) 80010117 Call context cannot be accessed after call completed.
      onecoreuap\shell\ext\thumbnailcache\lib\thumbcacheapi.cpp(327)\thumbcache.dll!00007FFC2E7C0D61: (caller: 00007FFC2E7A778F) ReturnHr(1) tid(506c) 80004005 Unspecified error
      onecoreuap\shell\ext\thumbnailcache\lib\thumbcacheapi.cpp(327)\thumbcache.dll!00007FFC2E7C0D61: (caller: 00007FFC2E7A778F) ReturnHr(2) tid(506c) 80004005 Unspecified error
      onecoreuap\shell\ext\thumbnailcache\lib\thumbcacheapi.cpp(327)\thumbcache.dll!00007FFC2E7C0D61: (caller: 00007FFC2E7A778F) ReturnHr(3) tid(506c) 80004005 Unspecified error
      onecoreuap\shell\ext\thumbnailcache\lib\thumbcacheapi.cpp(327)\thumbcache.dll!00007FFC2E7C0D61: (caller: 00007FFC2E7A778F) ReturnHr(4) tid(506c) 80004005 Unspecified error
      onecoreuap\shell\ext\thumbnailcache\lib\thumbcacheapi.cpp(327)\thumbcache.dll!00007FFC2E7C0D61: (caller: 00007FFC2E7A778F) ReturnHr(5) tid(506c) 80004005 Unspecified error
      onecoreuap\shell\ext\thumbnailcache\lib\thumbcacheapi.cpp(327)\thumbcache.dll!00007FFC2E7C0D61: (caller: 00007FFC2E7A778F) ReturnHr(6) tid(506c) 80004005 Unspecified error
      onecore\windows\directx\database\helperlibrary\lib\directxdatabasehelper.cpp(652)\d3d9.dll!00007FFC1657D025: (caller: 00007FFC1657CB2C) ReturnHr(2) tid(50a0) 80004002 No such interface supported
      
      Exception at 0x7ffc57484f69, code: 0xe06d7363: C++ exception, flags=0x1 (execution cannot be continued) (first chance) in EVR!MFCreateVideoOTA
      
      Exception at 0x7ffc57484f69, code: 0xe06d7363: C++ exception, flags=0x1 (execution cannot be continued) (first chance) in EVR!DllCanUnloadNow
      
      Exception at 0x7ffc57484f69, code: 0xe06d7363: C++ exception, flags=0x1 (execution cannot be continued) (first chance) in EVR!DllCanUnloadNow
      
      Exception at 0x7ffc57484f69, code: 0xe06d7363: C++ exception, flags=0x1 (execution cannot be continued) (first chance) in ntdll!RtlCaptureContext2
      

        1. video.mp4
          494 kB
          Vladimir Belyavsky
        2. image-2022-03-19-17-54-39-850.png
          156 kB
          Vladimir Belyavsky
        3. image-2022-03-21-21-07-15-334.png
          51 kB
          Vladimir Belyavsky
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            anrocha André De La Rocha (Inactive)
            studiosus Vladimir Belyavsky
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes